fix: CSS: element__button(change: image format and opacity), element__descrition(change:folder name), profile__botton(change: border), element__text(add: text-overflow,max-width,overflow,white-space), popup__close-icon(change: right && top on max-width: 540px), elements(add: justify-content) element(change: width) // js:remove textWarp function and var

--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,5 +1,5 @@
 .element__button{
-  background-image: url(../../../images/like-button.png);
+  background-image: url(../../../images/likebutton.svg);
   width: 22px;
   height: 19px;
   background-position: center;
@@ -13,6 +13,6 @@
 }
 
 .element__button:hover{
-  opacity: 0.6;
+  opacity: 0.5;
   transition: 0.5s;
 }
