--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -7,4 +7,8 @@
   font-size: 24px;
   margin-left: 7.5%;
   overflow-wrap: anywhere;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
