--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,5 @@
 .element {
-  width: 32.1%;
+  width: 282px;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
