--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,11 @@
 .elements {
   margin-top: 51px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px 1.85%;
+  justify-content: center;
 }
 
 @media screen and (max-width: 540px) {
