--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -18,8 +18,8 @@
   .popup__close-icon{
     width: 20px;
     height: 20px;
-    right: -21px;
-    top: -21px;
+    right: 0px;
+    top: -32px;
   }
 }
 
